--- a/nick/translations/de_DE.json
+++ b/nick/translations/de_DE.json
@@ -1,5 +1,5 @@
 {
-  "17TFCN": "Congratulations",
+  "17TFCN": "Herzliche Glückwünsche",
   "Qsqy": "You've successfully created your profile You're now ready to continue your journey in the Origin Marketplace.",
   "1IZ5ov": "Ok",
   "yzJlS": "ETH Address",
@@ -111,10 +111,10 @@
   "3O3nPR": "Verify your Wechat Profile",
   "2yQKie": "Verify your GitHub Profile",
   "22ykGg": "Verify your LinkedIn Profile",
-  "FajrL": "Verify your Telegram Profile",
+  "FajrL": "Überprüfen Sie Ihr Telegram-Profil",
   "2peucP": "Erstellen Sie eine Auflistung",
   "2QerxF": "Kaufen Sie eine Auflistung",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Januar 2019 Kampagne",
     "growth.jan2019.short_name": "Januar 2019",
     "growth.feb2019.name": "Februar 2019 Kampagne",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Kampagne",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Kampagne",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Bestätigte E-Mail- und Origin-Profile",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,13 +236,28 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Verkaufen Sie ein Angebot",
   "3H6hnZ": "Share this on Twitter",
   "2TpGxd": "Share this on Facebook",
   "9RNU7": "Follow us on Twitter",
-  "3ia70n": "Join us on Telegram",
+  "3ia70n": "Treten Sie Telegramm bei",
   "2anQQJ": "Like our Facebook Page",
   "3XLL4i": "Requires:",
   "nbvr5": "Less Details",
@@ -314,7 +333,7 @@
   "2sSICu": "Streit angefangen",
   "1pxzG8": "Urteil gemacht",
   "1dxXSN": "Loslegen",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Schreiben an die Blockchain.",
   "48sqnA": "Dies kann eine Minute dauern.",
   "3JYttU": "Auf Bestätigung warten.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Wenn Sie Fragen haben oder eine Transaktion bestreiten müssen, {=let us know}.",
   "1cDNp2": "Lass uns wissen",
   "2aLpDM": "Ich habe es verstanden.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Boost ist erforderlich",
   "enjCs": "Boost muss eine Zahl sein",
   "2PfKPF": "Boost muss null oder größer sein",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Ihr Eintrag wurde erstellt!",
-  "3wzgqi": "Ihr Eintrag wird in wenigen Sekunden sichtbar sein. Folgendes passiert als nächstes: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Käufer werden Ihren Eintrag jetzt auf dem Marktplatz sehen.",
-  "1kWh5e": "Wenn ein Käufer für Ihr Angebot ein Angebot macht, können Sie es annehmen oder ablehnen.",
-  "tlGL2": "Sobald das Angebot angenommen wurde, wird von Ihnen erwartet, dass Sie die Bestellung ausführen.",
-  "GDqc6": "Sie erhalten die Zahlung, sobald der Käufer bestätigt, dass die Bestellung erfüllt wurde.",
-  "RwRY0": "Liste anzeigen",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Ihr Eintrag wurde aktualisiert!",
-  "3uI2LK": "Ihr Eintrag wird in wenigen Sekunden sichtbar sein. Folgendes passiert als nächstes: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Käufer werden Ihren Eintrag jetzt auf dem Marktplatz sehen.",
-  "1FflGv": "Wenn ein Käufer für Ihr Angebot ein Angebot macht, können Sie es annehmen oder ablehnen.",
-  "1lOiT1": "Sobald das Angebot angenommen wurde, wird von Ihnen erwartet, dass Sie die Bestellung ausführen.",
-  "1ZL8Bw": "Sie erhalten die Zahlung, sobald der Käufer bestätigt, dass die Bestellung erfüllt wurde.",
-  "4iVrWM": "Lädt",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
@@ -737,8 +744,8 @@
   "2sRdX8": "That you have a verified phone number, but NOT your actual phone number",
   "1OUJhq": "Enter the code we sent you below",
   "jNcvI": "We’ve sent you a verification code via SMS. Please enter it below",
-  "4laugF": "Verify Telegram Account",
-  "3hKLwD": "Verify your Telegram Account",
+  "4laugF": "Überprüfen Sie Telegram-Konto",
+  "3hKLwD": "Überprüfen Sie Ihr Telegram-Konto",
   "2KQpoG": "We will never post on your behalf.",
   "2Ezyas": "What will be visible on the blockchain?",
   "44w6ur": "Your Telegram username and account ID",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Your ETH will be transferred to an escrow contract and held until the sale is completed.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Payment",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "Menge",
   "1usuUr": "Zeitzone:",
   "4xvjOX": "HINWEIS: Dies unterscheidet sich von Ihrer Zeitzone {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Listing nicht gefunden",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Listing {id}",
-  "1ucotJ": "Eintrag ungültig",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Hinweis: Suche nicht verfügbar",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Inserate",
     "_1": "1 Listing"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Inserate",
   "62EcI": "Keine Suchergebnisse gefunden",
   "49IFWc": "Ihr Marktplatz hat noch keine Angebote",
   "2Vj5Zk": "Sie können selbst Inserate erstellen oder Verkäufer zu Ihrer Plattform einladen!",
   "2Qfyq": "Erstellen Sie eine Auflistung",
   "4u7nzi": "Keine Angebote gefunden",
+  "4F16NR": "Search",
+  "JcV8m": "Hinweis: Suche nicht verfügbar",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Inserate",
+  "3ODHrz": "Back",
   "4v3q78": "Mehr laden",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Nachrichten können nicht abgefragt werden",
   "333iq2": "Keine Gespräche!",
   "1DH3KE": "Mitteilungen",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Einkäufe",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Origin Messaging",
   "4aVWeW": "Origin Messaging-Synchronisierung",
-  "mmY61": "0 von 2 MetaMask-Nachrichten signiert",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "Mit Messaging können Sie mit anderen Käufern und Verkäufern chatten.",
   "1h9kqx": "Warten auf das Signieren der Nachrichtennummer {messageNumber}",
   "tZGri": "{messageNumber} von 2 MetaMask-Nachrichten signiert",
@@ -956,8 +960,10 @@
   "34wViE": "2 von 2 MetaMask-Nachrichten signiert",
   "2xVe7N": "Herzliche Glückwünsche! Sie können jetzt anderen Benutzern bei Origin eine Nachricht senden und über alle Ihre Einkäufe und Verkäufe auf dem Laufenden bleiben.",
   "3xbKVN": "Sie sind fertig und können fortfahren, indem Sie die Taste unten drücken.",
+  "2MbPUC": "Continue",
   "1bjxG": "Fehler",
   "B3XI5": "Kein Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Aktivieren Sie Messaging",
   "42zV7P": "Installieren Sie die MetaMask",
   "1AkpVQ": "MetaMask installieren ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Verfügbar für {browser}",
   "29RrPk": "Verbinden Sie die MetaMask",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Desktopbenachrichtigungen aktiviert ✅",
   "gLVF0": "die Einstellungen",
   "1lZQR5": "die Einstellungen",
