--- a/nick/translations/el_GR.json
+++ b/nick/translations/el_GR.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Δημιουργία μιας λίστας",
   "2QerxF": "Αγοράστε μια λίστα",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Ιανουάριος 2019 Εκστρατεία",
     "growth.jan2019.short_name": "Ιαν 2019",
     "growth.feb2019.name": "Φεβρουάριος 2019 Εκστρατεία",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "Ιούνιος 2019",
     "growth.july2019.name": "Εκστρατεία Ιουλίου 2019",
     "growth.july2019.short_name": "Ιούλιος 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Επαληθευμένο προφίλ email και προέλευσης",
     "growth.two.attestations.requirement": "Δύο επαληθεύσεις προφίλ",
     "growth.profile.requirement": "Όνομα προφίλ και φωτογραφία",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Πωλήστε μια λίστα",
   "3H6hnZ": "Share this on Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Η διαφορά ξεκίνησε",
   "1pxzG8": "Επιλέχθηκε απόφαση",
   "1dxXSN": "Ξεκίνα",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Γράφοντας στο blockchain.",
   "48sqnA": "Αυτό μπορεί να διαρκέσει ένα λεπτό.",
   "3JYttU": "Αναμονή για επιβεβαίωση.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Εάν έχετε οποιεσδήποτε ερωτήσεις ή πρέπει να αμφισβητήσετε μια συναλλαγή, {=let us know}.",
   "1cDNp2": "Ενημέρωσέ μας",
   "2aLpDM": "Το πιασα.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Απαιτείται ενίσχυση",
   "enjCs": "Η ώθηση πρέπει να είναι ένας αριθμός",
   "2PfKPF": "Η ενίσχυση πρέπει να είναι μηδέν ή μεγαλύτερη",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Η καταχώρισή σας έχει δημιουργηθεί!",
-  "3wzgqi": "Η καταχώρισή σας θα είναι ορατή μέσα σε λίγα δευτερόλεπτα. Εδώ είναι τι συμβαίνει στη συνέχεια: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Οι αγοραστές θα δουν τώρα την καταχώρισή σας στην αγορά.",
-  "1kWh5e": "Όταν ένας αγοραστής κάνει μια προσφορά στην καταχώρισή σας, μπορείτε να επιλέξετε να την αποδεχθείτε ή να την απορρίψετε.",
-  "tlGL2": "Μόλις γίνει δεκτή η προσφορά, θα πρέπει να εκτελέσετε την παραγγελία.",
-  "GDqc6": "Θα λάβετε πληρωμή μόλις ο αγοραστής επιβεβαιώσει ότι η παραγγελία έχει εκπληρωθεί.",
-  "RwRY0": "Προβολή λίστας",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Η καταχώρισή σας έχει ενημερωθεί!",
-  "3uI2LK": "Η καταχώρισή σας θα είναι ορατή μέσα σε λίγα δευτερόλεπτα. Εδώ είναι τι συμβαίνει στη συνέχεια: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Οι αγοραστές θα δουν τώρα την καταχώρισή σας στην αγορά.",
-  "1FflGv": "Όταν ένας αγοραστής κάνει μια προσφορά στην καταχώρισή σας, μπορείτε να επιλέξετε να την αποδεχθείτε ή να την απορρίψετε.",
-  "1lOiT1": "Μόλις γίνει δεκτή η προσφορά, θα πρέπει να εκτελέσετε την παραγγελία.",
-  "1ZL8Bw": "Θα λάβετε πληρωμή μόλις ο αγοραστής επιβεβαιώσει ότι η παραγγελία έχει εκπληρωθεί.",
-  "4iVrWM": "Φόρτωση",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Επιτυχία!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Το ΕΤΗ σας θα μεταφερθεί σε σύμβαση μεσεγγύησης και θα κρατηθεί μέχρι να ολοκληρωθεί η πώληση.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Πληρωμή",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "Ποσότητα",
   "1usuUr": "Ζώνη ώρας:",
   "4xvjOX": "ΣΗΜΕΙΩΣΗ: Αυτό διαφέρει από τη ζώνη ώρας σας από {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Η λίστα δεν βρέθηκε",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Λίστα {id}",
-  "1ucotJ": "Η καταχώρηση δεν είναι έγκυρη",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Σημείωση: Η αναζήτηση δεν είναι διαθέσιμη",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Καταχωρήσεις",
     "_1": "1 Λίστα"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Καταχωρήσεις",
   "62EcI": "Δεν βρέθηκαν αποτελέσματα αναζήτησης",
   "49IFWc": "Η αγορά σας δεν έχει καταχωρήσεις ακόμα",
   "2Vj5Zk": "Μπορείτε να δημιουργήσετε οι ίδιοι καταχωρήσεις ή να καλέσετε τους πωλητές να συμμετάσχουν στην πλατφόρμα σας!",
   "2Qfyq": "Δημιουργία μιας λίστας",
   "4u7nzi": "Δεν βρέθηκαν καταχωρήσεις",
+  "4F16NR": "Search",
+  "JcV8m": "Σημείωση: Η αναζήτηση δεν είναι διαθέσιμη",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Καταχωρήσεις",
+  "3ODHrz": "Back",
   "4v3q78": "Φόρτωσε περισσότερα",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Δεν είναι δυνατή η αναζήτηση μηνυμάτων",
   "333iq2": "Δεν υπάρχουν συνομιλίες!",
   "1DH3KE": "Μηνύματα",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Αγορές",
   "3ypwUq": "Καταχωρήσεις",
   "2SCFyd": "Πωλήσεις",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Αρχική μηνύματα",
   "4aVWeW": "Προέλευση συγχρονισμού μηνυμάτων",
-  "mmY61": "Υποβλήθηκε 0 από 2 μηνύματα MetaMask",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "Τα μηνύματα θα σας επιτρέψουν να συνομιλήσετε με άλλους αγοραστές και πωλητές.",
   "1h9kqx": "Αναμονή για να υπογράψετε τον αριθμό μηνύματος {messageNumber}",
   "tZGri": "Υποβλήθηκε {messageNumber} από 2 μηνύματα MetaMask",
@@ -956,8 +960,10 @@
   "34wViE": "2 από τα 2 μηνύματα MetaMask που υπογράφηκαν",
   "2xVe7N": "Συγχαρητήρια! Τώρα μπορείτε να ενημερώσετε άλλους χρήστες για την Προέλευση και να είστε ενήμεροι με όλες τις αγορές και τις πωλήσεις σας.",
   "3xbKVN": "Έχετε τελειώσει και μπορείτε να συνεχίσετε πιέζοντας το παρακάτω κουμπί.",
+  "2MbPUC": "Continue",
   "1bjxG": "Σφάλμα",
   "B3XI5": "Δεν Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Ενεργοποίηση Μηνυμάτων",
   "42zV7P": "Εγκαταστήστε το MetaMask",
   "1AkpVQ": "Εγκατάσταση του MetaMask ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Διαθέσιμο για {browser}",
   "29RrPk": "Συνδέστε το MetaMask",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Οι ειδοποιήσεις επιφάνειας εργασίας είναι ενεργοποιημένες ✅",
   "gLVF0": "Ρυθμίσεις",
   "1lZQR5": "Ρυθμίσεις",
