--- a/nick/translations/ja_JP.json
+++ b/nick/translations/ja_JP.json
@@ -111,10 +111,10 @@
   "3O3nPR": "WeChatのプロフィールを承認してください。",
   "2yQKie": "Githubのプロフィールを承認してください。",
   "22ykGg": "LinkedInのプロフィールを承認してください",
-  "FajrL": "Verify your Telegram Profile",
+  "FajrL": "Tekegramのプロフィールを認証してください。",
   "2peucP": "掲載情報を作成する。",
   "2QerxF": "購入する",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "2019年1月キャンペーン",
     "growth.jan2019.short_name": "2019年1月",
     "growth.feb2019.name": "2019年2月キャンペーン",
@@ -129,11 +129,15 @@
     "growth.june2019.short_name": "2019年6月",
     "growth.july2019.name": "2019年7月キャンペーン",
     "growth.july2019.short_name": "2019年7月",
+    "growth.aug2019.name": "2019年8月キャンペーン",
+    "growth.aug2019.short_name": "2019年8月",
+    "growth.sep2019.name": "2019年9月キャンペーン",
+    "growth.sep2019.short_name": "2019年9月",
     "growth.profile.and.email.requirement": "確認済みのメールアドレスとOriginのプロフィール",
     "growth.two.attestations.requirement": "２つのプロフィール認証",
     "growth.profile.requirement": "プロフィール名と写真",
     "growth.email.requirement": "確認済みメール",
-    "growth.attestation.requirement.telegram": "Telegram attestation",
+    "growth.attestation.requirement.telegram": "Telegram認証",
     "growth.purchase.tshirt.title": "OriginのグラフィックTシャツを購入する",
     "growth.purchase.tshirt.details": "購入したTシャツ1枚につき25 OGNを獲得できます。",
     "growth.purchase.gc.title": "Amazonギフトカード25USドル分を購入する",
@@ -232,23 +236,38 @@
     "growth.twitterShare.content5.title": "Originグローバルコミュニティ",
     "growth.twitterShare.content5.details": "Originには世界中にユーザーが存在し、何万人ものコミュニティメンバーがチームとビジョンを共有しています。あなたも、今すぐTelegram（英語）に参加ください！",
     "growth.twitterShare.content5.link": "記事を読む",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "Youtube創設者がOriginの強みを語る！",
+    "growth.share.content6.details": "Youtubeの共同創設者であるSteve Chen氏が、Originの強みについて語りました。",
+    "growth.share.content6.link": "動画を見る",
+    "growth.share.content7.title": "OGNを獲得するための新しい方法（９月）",
+    "growth.share.content7.details": "Origin Rewardsに参加して、世界中のユーザーと一緒にトークンホルダーになりましょう！",
+    "growth.share.content7.link": "記事を読む",
+    "growth.share.content8.title": "OriginがBlockfolioに追加されました！",
+    "growth.share.content8.details": "OriginをBlockfolioでフォローして、Originコアチームからの最新情報をゲットしましょう！",
+    "growth.share.content8.link": "記事を読む",
+    "growth.share.content9.title": "Originチームに参加してOGNをゲットしよう！",
+    "growth.share.content9.details": "テレグラムでOriginをフォローしてOriginトークンをゲットしよう！",
+    "growth.share.content9.link": "記事を読む",
+    "growth.share.content10.title": "ベネズエラの分散型商業システム",
+    "growth.share.content10.details": "ブロックチェーンを活用したマーケットに、安価なスマホを通じて20億人の銀行口座のない人たちがアクセスできるようになります。",
+    "growth.share.content10.link": "記事を読む"
   },
   "2hr27C": "販売する",
   "3H6hnZ": "これをTwitterで共有する",
-  "2TpGxd": "Share this on Facebook",
+  "2TpGxd": "Facebookにシェア",
   "9RNU7": "Twitterでフォローしましょう！",
-  "3ia70n": "Join us on Telegram",
-  "2anQQJ": "Like our Facebook Page",
+  "3ia70n": "Telegramに参加する",
+  "2anQQJ": "Facebookにイイネする",
   "3XLL4i": "必要：",
   "nbvr5": "表示をへらす",
   "3QQumu": "詳細を表示する",
   "2qp2PH": "認証",
   "AvXdK": "購入",
   "VUfcH": "Originを宣伝する",
-  "19MYtU": "Requires: Email and profile verifications",
+  "19MYtU": "Emailとプロフィールの認証が必要です",
   "1cVxL1": "Originをフォローする",
-  "3bM6xM": "Requires: Email and profile verifications",
+  "3bM6xM": "Emailとプロフィールの認証が必要です",
   "3jSVl7": "招待",
   "34uH3R": "利用可能",
   "4qOByY": "収益",
@@ -268,11 +287,11 @@
   "3be8fh": "OK",
   "4qkP5F": "トリミング",
   "BcfF1": "削除",
-  "4BqSHh": "None",
-  "3fw2ge": "Very High",
-  "7HIrq": "High",
-  "FIeFC": "Above Average",
-  "1qg5Xa": "Low",
+  "4BqSHh": "無し",
+  "3fw2ge": "とても高い",
+  "7HIrq": "高い",
+  "FIeFC": "平均以上",
+  "1qg5Xa": "低い",
   "3N2LLn": "お使いのブラウザはビデオタグをサポートしていません。",
   "4wUbJF": "稼ぐ",
   "1UrIqq": "{content}{=/ night}",
@@ -314,7 +333,7 @@
   "2sSICu": "紛争が開始されました",
   "1pxzG8": "裁定が決定しました",
   "1dxXSN": "はじめに",
-  "2XB2Ju": "ユーザーに連絡する",
+  "23Rjrw": "お問い合わせ",
   "2XVXB5": "ブロックチェーンへ書き込んでいます",
   "48sqnA": "これには少し時間がかかります。",
   "3JYttU": "承諾を待っています。",
@@ -334,6 +353,8 @@
   "3RWPjE": "質問がある場合、または取引について異議を唱える必要がある場合は、 {=let us know}。",
   "1cDNp2": "私たちに知らせて",
   "2aLpDM": "わかりました",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "ヘルプ",
   "1nLPNA": "サポート、設定など",
   "37CWGX": "閉じる",
@@ -513,26 +534,12 @@
   "3OynBg": "ブーストが必要です",
   "enjCs": "ブーストは数値である必要があります",
   "2PfKPF": "ブーストはゼロ以上でなければなりません",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "出品情報が作成されました！",
-  "3wzgqi": "あなたのリスティングは数秒以内に表示されます。これが次に起こることです： {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "買い手はマーケットプレースであなたの出品情報を見ることができます。",
-  "1kWh5e": "買い手があなたの出品情報にオファーをしたら、それを受け入れるか拒否するかを選択できます。",
-  "tlGL2": "オファーが受け入れられると、注文を実行しなければなりません。",
-  "GDqc6": "買い手が注文の完了を確認すると、あなたは支払いを受け取ります。",
-  "RwRY0": "出品情報を見る",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "出品情報が更新されました！",
-  "3uI2LK": "あなたのリスティングは数秒以内に表示されます。これが次に起こることです： {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "買い手はマーケットプレースであなたの出品情報を見ることができます。",
-  "1FflGv": "買い手があなたの出品情報にオファーをしたら、それを受け入れるか拒否するかを選択できます。",
-  "1lOiT1": "オファーが受け入れられると、注文を実行しなければなりません。",
-  "1ZL8Bw": "買い手が注文の完了を確認すると、あなたは支払いを受け取ります。",
-  "4iVrWM": "読込中",
-  "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
-  "1DYydy": "Approve OGN",
+  "IY0I8": "おめでとうございます!!",
+  "2CH3xS": "出品情報が正しく公開されました。",
+  "3fVQoe": "自分の出品情報を見る",
+  "3irw3i": "出品情報を作成する",
+  "3BUXpv": "{=Approve OGN} OriginでOGNを使うには、下記をクリックして認証を行ってください。",
+  "1DYydy": "OGNを認証する",
   "1ZMsNQ": "成功!",
   "2DVeBg": "OriginがあなたのDAIを動かす事ができるようになりました。",
   "D0geX": "価格",
@@ -619,7 +626,7 @@
   "3yrS0x": "ソーシャルチャネルを選択",
   "22t1HQ": "Originに関する記事またはビデオを選択し、ソーシャルチャンネルで共有してください。",
   "pmAgP": "これをどこで共有しますか？より多くの報酬を得るには、より多くのチャンネルを選択してください！",
-  "3Lkm5R": "Back to Promotions",
+  "3Lkm5R": "プロモーションに戻る",
   "4ELZvV": "キャンペーンに戻る",
   "zn8Mj": "購入",
   "2TQEGi": "キャンペーンに戻る",
@@ -714,12 +721,12 @@
   "3EZpe2": "認証",
   "1MGoka": "メール アドレスを認証してください。",
   "1yqhXg": "他のユーザはあなたが認証済みのFacebookアカウント{provider} を持っていることを知ることは出来ますがアカウントの詳細はブロックチェーン上に公開されません。また、Originがあなたの代理として投稿をする事もありません。",
-  "C9Xmg": "Your Facebook account ID",
-  "21Ni1q": "Your Twitter username and account ID",
-  "2W3fI2": "Your Google account ID",
-  "2YI16P": "Your Kakao account ID",
-  "tkKfT": "Your Wechat account ID",
-  "qvgE3": "Your GitHub username and account ID",
+  "C9Xmg": "FacebookアカウントID",
+  "21Ni1q": "Twitterのユーザー名とアカウントID",
+  "2W3fI2": "GoogleアカウントID",
+  "2YI16P": "KakaoアカウントID",
+  "tkKfT": "WeChatアカウントID",
+  "qvgE3": "Githubのユーザー名とアカウントID",
   "DNxYB": "LinkedInユーザー名",
   "2Hz1fz": "何がブロックチェーン上で表示されますか？",
   "2hiWEB": "アカウント{provider} を確認",
@@ -737,11 +744,11 @@
   "2sRdX8": "認証済みの電話番号はありますが、これはあなたの本当の電話番号ではありません。",
   "1OUJhq": "送付されたコードを記入ください",
   "jNcvI": "SMSで確認コードを送信しました。以下に入力してください",
-  "4laugF": "Verify Telegram Account",
-  "3hKLwD": "Verify your Telegram Account",
-  "2KQpoG": "We will never post on your behalf.",
-  "2Ezyas": "What will be visible on the blockchain?",
-  "44w6ur": "Your Telegram username and account ID",
+  "4laugF": "Telegramアカウントの認証",
+  "3hKLwD": "Telegramアカウントの認証",
+  "2KQpoG": "あなたに代わって投稿することはありません。",
+  "2Ezyas": "何がブロックチェーン上で表示されますか？",
+  "44w6ur": "Telegramのユーザー名とアカウントID",
   "3fLVs6": "あなたのウェブサイトを承認する",
   "vyn8P": "下記にあなたのウェブサイトのURLを入力してください",
   "2DQDJG": "何がブロックチェーン上で表示されますか？",
@@ -759,16 +766,12 @@
   "2jI1fH": "チェックイン",
   "2dFweL": "終了",
   "7piHc": "チェックアウト",
-  "2nApoY": "Commission",
-  "2QlAhE": "Commission per Unit",
-  "1Lcd02": "Total Budget",
-  "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
-  "3a7oWw": "Listing Exposure",
-  "17sXwL": "Edit Commisison",
+  "2nApoY": "手数料",
+  "2QlAhE": "単位あたりのコミッション",
+  "1Lcd02": "予算",
+  "NWpZ1": "予算の残り",
+  "3a7oWw": "出品情報の表示頻度",
+  "17sXwL": "手数料の編集",
   "2SB7RO": "保留中",
   "ZPHz5": "この出品情報へオファーが来ました",
   "bxYNS": "販売済み",
@@ -792,13 +795,17 @@
   "73tw2": "あなたのETHはエスクローされ、売却が完了するまで保持されます。",
   "1BJrxU": "ETHの金額は概算であり、エスクロー契約に移行される前にDAIに変換されます。",
   "1vXR79": "支払い",
+  "8kJRE": "自分の出品をプロモーションする",
+  "1voSMo": "掲載回数を増やして売れやすくする",
+  "4u4ITL": "プロモーションしましょう",
+  "1uOQBZ": "OGNを入手するには",
   "IlnwX": "数量",
   "1usuUr": "タイムゾーン:",
   "4xvjOX": "注：これは {userTimeZone}タイムゾーンとは異なります",
   "NF15": "削除",
   "dyal9": "リストが見つかりません",
+  "1qiDQm": "出品情報が無効です",
   "ZOcTF": "リスト {id}",
-  "1ucotJ": "リストが無効です",
   "1JLB9": "この販売者の出品情報",
   "OTShT": "製品説明",
   "4xrZ3E": "販売者について",
@@ -813,22 +820,10 @@
   "37CGq4": "{=Origin Tokens} を獲得できます",
   "2uLTWt": "Originトークン",
   "3xBWhk": "Originチームから",
-  "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "注：検索は利用できません",
-  "zHCdD": "カテゴリー",
-  "qNN0R": "報酬",
-  "w9VwW": "アパレル",
-  "3KBUPq": "ギフトカード",
-  "1n8Uhq": "住宅",
-  "13f5tg": "サービス",
-  "3duCHQ": "アート",
+  "4CmiKR": "買い物してトークンをゲット！",
   "1tebgy": {
     "*": "{number} 出品情報",
     "_1": "１ 出品情報"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} 結果",
-    "_1": "{count} {category} 結果"
   },
   "3pJs9O": {
     "*": "{count} Originリワードのピックアップ出品情報",
@@ -838,18 +833,28 @@
     "*": "{number} 結果",
     "_1": "１件"
   },
-  "39Up0B": "出品情報",
   "62EcI": "検索結果がありません。",
   "49IFWc": "まだ出品情報が作成、および公開されていません。",
   "2Vj5Zk": "あなた自身で掲載情報を作成したり、販売したい人をプラットフォームに招待したりできます。",
   "2Qfyq": "掲載情報を作成する。",
   "4u7nzi": "出品情報が見つかりません",
+  "4F16NR": "検索",
+  "JcV8m": "注：検索は利用できません",
+  "zHCdD": "カテゴリー",
+  "qNN0R": "報酬",
+  "w9VwW": "アパレル",
+  "3KBUPq": "ギフトカード",
+  "1n8Uhq": "住宅",
+  "13f5tg": "サービス",
+  "3duCHQ": "アート",
+  "39Up0B": "出品情報",
+  "3ODHrz": "戻る",
   "4v3q78": "もっと読み込む",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
-  "3Ul6WQ": "Price: Low to High",
-  "1rioH9": "Price: High to Low",
+  "4pf0yW": "Featured",
+  "3Ul6WQ": "価格：低→高",
+  "1rioH9": "価格：高→低",
+  "qqmM": "Sort",
+  "114jZK": "ソート",
   "2XkwlS": "メッセージを照会できません",
   "333iq2": "会話はありません！",
   "1DH3KE": "メッセージ",
@@ -896,7 +901,6 @@
   "4hyWlA": "出品情報を作成する。",
   "30cTSB": "設定",
   "26gf1A": "出品情報を編集する",
-  "3ODHrz": "戻る",
   "dztC6": "購入",
   "3ypwUq": "出品情報",
   "2SCFyd": "販売",
@@ -947,7 +951,7 @@
   "4B7lnl": "Origin マーケットプレイスで公開する、基本的なプロファイルを作成します。",
   "t06nL": "Originメッセージ機能",
   "4aVWeW": "オリジンメッセージングの同期",
-  "mmY61": "0/2メタマスクメッセージが署名されている",
+  "1Nq45C": "{messageNumber} ２つのMetaMaskメッセージが署名されました",
   "3bcmm4": "メッセージングを使用すると、他の購入者や販売者とチャットすることができます。",
   "1h9kqx": "あなたがメッセージ番号 {messageNumber}に署名するのを待っています",
   "tZGri": "{messageNumber} 2つのMetaMaskメッセージの署名されました",
@@ -956,8 +960,10 @@
   "34wViE": "2の2 MetaMaskメッセージが署名した",
   "2xVe7N": "おめでとうございます。 Originのユーザーへメッセージを送る事ができるようになりました。取引に関する情報も最新にキープされます。",
   "3xbKVN": "下のボタンを押すと完了です。",
+  "2MbPUC": "続ける",
   "1bjxG": "エラー",
   "B3XI5": "Web3なし",
+  "3SotHT": "エラーが起きました",
   "1LEF7E": "メッセージ機能を有効にする",
   "42zV7P": "MetaMaskをインストールしてください",
   "1AkpVQ": "MetaMaskをインストールしています...",
@@ -989,22 +995,32 @@
   "1X9OF7": "MetaMaskは、分散WebにアクセスできるようにするChromeのブラウザ拡張機能です。",
   "XaD4D": "{browser}利用可能",
   "29RrPk": "MetaMaskを接続する",
-  "4apdzo": "Promote Now",
-  "1o5hKC": "Please enter a commission amount",
-  "2IWJV3": "Not enough OGN",
-  "3kj2Lx": "Promote Listing",
-  "2cMBmH": "Units Available: {unitsAvailable}",
+  "1AQgmT": "アプリを開いています…",
+  "4iVrWM": "Loading",
+  "4apdzo": "プロモーションしましょう",
+  "1o5hKC": "手数料を入力してください。",
+  "2IWJV3": "OGNが不足しています。",
+  "3kj2Lx": "出品情報をプロモーションする。",
+  "L9mjs": "OGN残高",
+  "2cMBmH": "在庫: {unitsAvailable}",
+  "kqBmE": "単位あたりの販売手数料",
+  "1ZZXAc": "手数料合計",
+  "F4rDk": "販売が行われる際に自動で支払われます。",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
-  "OfLhI": "Listing exposure:",
-  "4x4HEK": "Please enter a commission budget",
-  "1amG5j": "Total Budget",
-  "1kXVpx": "Amount you’re willing to spend for all units sold",
-  "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
-  "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "OfLhI": "出品情報の表示頻度:",
+  "4x4HEK": "希望する手数料を入力してください。",
+  "1amG5j": "予算",
+  "1kXVpx": "完売までの予算",
+  "2luPDv": "完売するまでに必要なOGN。{unitsAvailable} 個: {totalCommission} OGN",
+  "1lrIeH": "どのように機能しますか？",
+  "vXDfP": "OGNを使って、自分の出品情報をプロモーションできます。OGNは {=commission} のようなもので、販売が行われると手数料として徴収されます。",
+  "2DUOxZ": "手数料",
+  "23CyCf": "こうすることで、あはなたの出品情報はOriginネットワーク上で、目立つように表示されます。{=more exposure}",
+  "41dR5i": "目立つように表示する",
+  "3vDb1N": "成功!",
+  "3NGsUC": "出品情報が正しくプロモーションされました。",
+  "3QQbmb": "出品情報の表示頻度",
   "3UjbU1": "デスクトップ通知を有効にする✅",
   "gLVF0": "設定",
   "1lZQR5": "設定",
@@ -1023,7 +1039,7 @@
   "2OjTbq": "プロキシアカウントを有効にする",
   "1KAkeW": "警告：自己責任で有効にしてください！",
   "2JuXjF": "Relayer 有効",
-  "3GHfag": "Promote Listings enabled",
+  "3GHfag": "出品情報のプロモーションが可能です",
   "pT9j": "開催",
   "NrhOS": "発売日",
   "QUO1v": "量",
