--- a/nick/translations/tr_TR.json
+++ b/nick/translations/tr_TR.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "İlan Oluştur",
   "2QerxF": "İlan Satın Alma",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Ocak 2019 Kampanyası",
     "growth.jan2019.short_name": "Ocak 2019",
     "growth.feb2019.name": "Şubat 2019 Kampanyası",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Doğrulanmış e-posta ve Menşe profili",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "İlan Sat",
   "3H6hnZ": "Share this on Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Anlaşmazlık Başladı",
   "1pxzG8": "Yapılan Karar",
   "1dxXSN": "Başlamak",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Blockchain'e yazıyorum.",
   "48sqnA": "Bu bir dakika sürebilir.",
   "3JYttU": "Onay bekliyor.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Herhangi bir sorunuz varsa veya bir anlaşmaya itiraz etmeniz gerekiyorsa, {=let us know}.",
   "1cDNp2": "bilmemize izin ver",
   "2aLpDM": "Anladım.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Yükseltme gerekli",
   "enjCs": "Yükseltme bir sayı olmalıdır",
   "2PfKPF": "Yükseltme sıfır veya daha büyük olmalıdır",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Girişiniz oluşturuldu!",
-  "3wzgqi": "Girişiniz birkaç saniye içinde görünecek. İşte bundan sonra ne olacak: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Alıcılar artık girişinizi pazarda görecekler.",
-  "1kWh5e": "Bir alıcı listenizde teklif verdiğinde, onu kabul etmeyi veya reddetmeyi seçebilirsiniz.",
-  "tlGL2": "Teklif kabul edildiğinde, siparişi yerine getirmeniz beklenir.",
-  "GDqc6": "Alıcı, siparişin yerine getirildiğini onayladıktan sonra ödeme alacaksınız.",
-  "RwRY0": "İlanı Görüntüle",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Girişiniz güncellendi!",
-  "3uI2LK": "Girişiniz birkaç saniye içinde görünecek. İşte bundan sonra ne olacak: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Alıcılar artık girişinizi pazarda görecekler.",
-  "1FflGv": "Bir alıcı listenizde teklif verdiğinde, onu kabul etmeyi veya reddetmeyi seçebilirsiniz.",
-  "1lOiT1": "Teklif kabul edildiğinde, siparişi yerine getirmeniz beklenir.",
-  "1ZL8Bw": "Alıcı, siparişin yerine getirildiğini onayladıktan sonra ödeme alacaksınız.",
-  "4iVrWM": "Yükleniyor",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Your ETH will be transferred to an escrow contract and held until the sale is completed.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Payment",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "miktar",
   "1usuUr": "Saat dilimi:",
   "4xvjOX": "NOT: Bu, {userTimeZone}saat diliminizden farklıdır.",
   "NF15": "Clear",
   "dyal9": "Liste bulunamadı",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "İlan {id}",
-  "1ucotJ": "Liste geçersiz",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Not: Arama kullanılamıyor",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} İlan",
     "_1": "1 İlan"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Listeler",
   "62EcI": "Arama Sonucu Bulunamadı",
   "49IFWc": "Pazar yerinizde henüz bir liste yok",
   "2Vj5Zk": "Listeleri kendiniz oluşturabilir veya satıcıları platformunuza katılmaya davet edebilirsiniz!",
   "2Qfyq": "İlan Oluştur",
   "4u7nzi": "İlan bulunamadı",
+  "4F16NR": "Search",
+  "JcV8m": "Not: Arama kullanılamıyor",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Listeler",
+  "3ODHrz": "Back",
   "4v3q78": "Daha fazla yükle",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Mesajlar sorgulanamıyor",
   "333iq2": "Konuşma yok!",
   "1DH3KE": "Mesajlar",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Purchases",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Kökeni Mesajlaşma",
   "4aVWeW": "Menşe Mesajlaşma Senkronizasyonu",
-  "mmY61": "2/0 MetaMask mesajı imzalandı",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "Mesajlaşma, diğer alıcılarla ve satıcılarla sohbet etmenizi sağlar.",
   "1h9kqx": "Mesaj numarasını {messageNumber}imzalamanı bekliyorum",
   "tZGri": "{messageNumber} 2 MetaMask mesajlarının imzalanan",
@@ -956,8 +960,10 @@
   "34wViE": "2/2 MetaMask mesajı imzalandı",
   "2xVe7N": "Tebrikler! Artık Origin'deki diğer kullanıcılara mesaj atabilir ve tüm alım satımlarınızla ilgili güncel bilgiler alabilirsiniz.",
   "3xbKVN": "Tamamlandı ve aşağıdaki düğmeye basarak devam edebilirsiniz.",
+  "2MbPUC": "Continue",
   "1bjxG": "Hata",
   "B3XI5": "Web3 Yok",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Mesajlaşmayı Etkinleştir",
   "42zV7P": "MetaMask'ı yükleyin",
   "1AkpVQ": "MetaMask yükleniyor ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "{browser}",
   "29RrPk": "MetaMask Bağlan",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Masaüstü bildirimleri etkin ✅",
   "gLVF0": "Ayarlar",
   "1lZQR5": "Ayarlar",
