--- a/nick/translations/fr_FR.json
+++ b/nick/translations/fr_FR.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Créer une annonce",
   "2QerxF": "Achat d'une annonce",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Campagne de janvier 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Campagne de février 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Email vérifié et profile sur Origin",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Vendre une annonce",
   "3H6hnZ": "Share this on Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Le litige a commencé",
   "1pxzG8": "Décision rendue",
   "1dxXSN": "Commencer",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Ecrire à la blockchain.",
   "48sqnA": "Cela peut prendre quelques instants.",
   "3JYttU": "En attente de confirmation.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Si vous avez des questions ou avez besoin de contester une transaction, appuyez sur {=let us know}.",
   "1cDNp2": "laissez nous savoir",
   "2aLpDM": "J? ai compris.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Boost est nécessaire",
   "enjCs": "Le boost doit être un nombre",
   "2PfKPF": "Le boost doit être nul ou supérieur",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Votre annonce a été créée!",
-  "3wzgqi": "Votre annonce sera visible dans quelques secondes. Voici ce qui se passe ensuite: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Les acheteurs verront maintenant votre annonce sur le marché.",
-  "1kWh5e": "Lorsqu'un acheteur fait une offre sur votre annonce, vous pouvez choisir de l'accepter ou de la refuser.",
-  "tlGL2": "Une fois l'offre acceptée, vous devrez exécuter la commande.",
-  "GDqc6": "Vous recevrez le paiement une fois que l'acheteur aura confirmé que la commande a été exécutée.",
-  "RwRY0": "Voir la annonce",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Votre fiche a été mise à jour!",
-  "3uI2LK": "Votre annonce sera visible dans quelques secondes. Voici ce qui se passe ensuite: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Les acheteurs verront maintenant votre annonce sur le marché.",
-  "1FflGv": "Lorsqu'un acheteur fait une offre sur votre annonce, vous pouvez choisir de l'accepter ou de la refuser.",
-  "1lOiT1": "Une fois l'offre acceptée, vous devrez exécuter la commande.",
-  "1ZL8Bw": "Vous recevrez le paiement une fois que l'acheteur aura confirmé que la commande a été exécutée.",
-  "4iVrWM": "Chargement",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Your ETH will be transferred to an escrow contract and held until the sale is completed.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Payment",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "Quantité",
   "1usuUr": "Fuseau horaire:",
   "4xvjOX": "Remarque: cela est différent de votre fuseau horaire de {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Annonce non trouvée",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Annonce {id}",
-  "1ucotJ": "Annonce non valide",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Note: Recherche non disponible",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Annonces",
     "_1": "1 Annonce"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Annonces",
   "62EcI": "Aucun résultat de recherche trouvé",
   "49IFWc": "Votre marché n'a pas encore d'annonce",
   "2Vj5Zk": "Vous pouvez créer vous-même des annonces ou inviter des vendeurs à rejoindre votre plateforme!",
   "2Qfyq": "Créer une annonce",
   "4u7nzi": "Aucune annonce trouvée",
+  "4F16NR": "Search",
+  "JcV8m": "Note: Recherche non disponible",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Annonces",
+  "3ODHrz": "Back",
   "4v3q78": "Charger plus",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Impossible d'interroger les messages",
   "333iq2": "Pas de conversation!",
   "1DH3KE": "Messages",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Purchases",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Messagerie d'Origin",
   "4aVWeW": "Synchronisation de la messagerie d'Origin",
-  "mmY61": "0 des 2 messages de méta-masque signés",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "La messagerie vous permettra de discuter avec d’autres acheteurs et vendeurs.",
   "1h9kqx": "En attente de votre signature du message numéro {messageNumber}",
   "tZGri": "{messageNumber} des 2 messages de méta-masque signés",
@@ -956,8 +960,10 @@
   "34wViE": "2 messages MetaMask sur 2 signés",
   "2xVe7N": "Toutes nos félicitations! Vous pouvez désormais envoyer des messages aux autres utilisateurs sur Origin et rester à jour de tous vos achats et ventes.",
   "3xbKVN": "Vous avez terminé et vous pouvez continuer en appuyant sur le bouton ci-dessous.",
+  "2MbPUC": "Continue",
   "1bjxG": "Erreur",
   "B3XI5": "Pas de Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Activer la messagerie",
   "42zV7P": "Installer MetaMask",
   "1AkpVQ": "Installation de MetaMask ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Disponible pour {browser}",
   "29RrPk": "Connecter le méta-masque",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Notifications de bureau activées",
   "gLVF0": "Réglages",
   "1lZQR5": "Réglages",
