--- a/nick/translations/id_ID.json
+++ b/nick/translations/id_ID.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Buat Daftar",
   "2QerxF": "Beli Daftar",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Kampanye Januari 2019",
     "growth.jan2019.short_name": "Jan 2019",
     "growth.feb2019.name": "Kampanye Februari 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Email yang diverifikasi dan profil Asal",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Jual Daftar",
   "3H6hnZ": "Share this on Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Perselisihan Dimulai",
   "1pxzG8": "Ruling Made",
   "1dxXSN": "Memulai",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Menulis ke blockchain.",
   "48sqnA": "Ini mungkin butuh satu menit.",
   "3JYttU": "Menunggu konfirmasi.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Jika Anda memiliki pertanyaan atau perlu mempersengketakan suatu transaksi, {=let us know}.",
   "1cDNp2": "Beritahu kami",
   "2aLpDM": "Saya mendapatkannya.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Boost diperlukan",
   "enjCs": "Boost harus berupa angka",
   "2PfKPF": "Boost harus nol atau lebih besar",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Daftar Anda telah dibuat!",
-  "3wzgqi": "Daftar Anda akan terlihat dalam beberapa detik. Inilah yang terjadi selanjutnya: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Pembeli sekarang akan melihat listing Anda di pasar.",
-  "1kWh5e": "Ketika pembeli mengajukan penawaran pada listing Anda, Anda dapat memilih untuk menerima atau menolaknya.",
-  "tlGL2": "Setelah penawaran diterima, Anda akan diharapkan untuk memenuhi pesanan.",
-  "GDqc6": "Anda akan menerima pembayaran setelah pembeli mengonfirmasi bahwa pesanan telah dipenuhi.",
-  "RwRY0": "Lihat Listing",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Daftar Anda telah diperbarui!",
-  "3uI2LK": "Daftar Anda akan terlihat dalam beberapa detik. Inilah yang terjadi selanjutnya: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Pembeli sekarang akan melihat listing Anda di pasar.",
-  "1FflGv": "Ketika pembeli mengajukan penawaran pada listing Anda, Anda dapat memilih untuk menerima atau menolaknya.",
-  "1lOiT1": "Setelah penawaran diterima, Anda akan diharapkan untuk memenuhi pesanan.",
-  "1ZL8Bw": "Anda akan menerima pembayaran setelah pembeli mengonfirmasi bahwa pesanan telah dipenuhi.",
-  "4iVrWM": "Memuat",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Your ETH will be transferred to an escrow contract and held until the sale is completed.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Payment",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "Kuantitas",
   "1usuUr": "Zona waktu:",
   "4xvjOX": "CATATAN: Ini berbeda dari zona waktu Anda {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Daftar tidak ditemukan",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Daftar {id}",
-  "1ucotJ": "Cantuman tidak valid",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Catatan: Pencarian tidak tersedia",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Listing",
     "_1": "1 Daftar"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Listing",
   "62EcI": "Tidak ditemukan hasil pencarian",
   "49IFWc": "Pasar Anda belum memiliki daftar apa pun",
   "2Vj5Zk": "Anda dapat membuat daftar sendiri atau mengundang penjual untuk bergabung dengan platform Anda!",
   "2Qfyq": "Buat Daftar",
   "4u7nzi": "Tidak ada listing ditemukan",
+  "4F16NR": "Search",
+  "JcV8m": "Catatan: Pencarian tidak tersedia",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Listing",
+  "3ODHrz": "Back",
   "4v3q78": "Muat lebih",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Tidak dapat meminta pesan",
   "333iq2": "Tidak ada percakapan!",
   "1DH3KE": "Pesan",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Purchases",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Pesan Asal",
   "4aVWeW": "Sinkronisasi Pesan Asal",
-  "mmY61": "0 dari 2 pesan MetaMask ditandatangani",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "Pesan memungkinkan Anda untuk mengobrol dengan pembeli dan penjual lain.",
   "1h9kqx": "Menunggu Anda menandatangani nomor pesan {messageNumber}",
   "tZGri": "{messageNumber} dari 2 pesan MetaMask ditandatangani",
@@ -956,8 +960,10 @@
   "34wViE": "2 dari 2 pesan MetaMask ditandatangani",
   "2xVe7N": "Selamat! Anda sekarang dapat mengirim pesan kepada pengguna lain di Asal dan tetap mengetahui semua pembelian dan penjualan Anda.",
   "3xbKVN": "Anda selesai dan dapat melanjutkan dengan menekan tombol di bawah ini.",
+  "2MbPUC": "Continue",
   "1bjxG": "Kesalahan",
   "B3XI5": "Tidak ada Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Aktifkan Perpesanan",
   "42zV7P": "Instal MetaMask",
   "1AkpVQ": "Menginstal MetaMask ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Tersedia untuk {browser}",
   "29RrPk": "Hubungkan MetaMask",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Pemberitahuan desktop diaktifkan ✅",
   "gLVF0": "Pengaturan",
   "1lZQR5": "Pengaturan",
