--- a/nick/translations/it_IT.json
+++ b/nick/translations/it_IT.json
@@ -111,10 +111,10 @@
   "3O3nPR": "Verifica il tuo profilo Wechat",
   "2yQKie": "Verifica il tuo profilo GitHub",
   "22ykGg": "Verifica il tuo profilo LinkedIn",
-  "FajrL": "Verify your Telegram Profile",
+  "FajrL": "Verifica il tuo Profilo Telegram",
   "2peucP": "Crea un annuncio",
   "2QerxF": "Acquista un annuncio",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Campagna di Gennaio 2019",
     "growth.jan2019.short_name": "Gen 2019",
     "growth.feb2019.name": "Campagna di Febbraio 2019",
@@ -129,11 +129,15 @@
     "growth.june2019.short_name": "Giugno 2019",
     "growth.july2019.name": "Luglio 2019 Campagna",
     "growth.july2019.short_name": "Luglio 2019",
+    "growth.aug2019.name": "Campagna di Agosto 2019",
+    "growth.aug2019.short_name": "Agosto 2019",
+    "growth.sep2019.name": "Campagna di Settembre 2019",
+    "growth.sep2019.short_name": "Settembre 2019",
     "growth.profile.and.email.requirement": "Email e profilo Origin verificati",
     "growth.two.attestations.requirement": "Due verifiche del profilo",
     "growth.profile.requirement": "Nome e foto del profilo",
     "growth.email.requirement": "Email verificata",
-    "growth.attestation.requirement.telegram": "Telegram attestation",
+    "growth.attestation.requirement.telegram": "Attestazione Telegram",
     "growth.purchase.tshirt.title": "Acquista una maglietta con grafica Origin",
     "growth.purchase.tshirt.details": "Guadagna 25 OGN per ogni t-shirt acquistata.",
     "growth.purchase.gc.title": "Acquista una carta regalo Amazon da 25 $",
@@ -232,13 +236,28 @@
     "growth.twitterShare.content5.title": "La community globale di Origin",
     "growth.twitterShare.content5.details": "Origin ha una presenza globale, con decine di migliaia di membri della comunità che supportano la nostra visione. Unisciti al nostro Telegram (ENG) oggi.",
     "growth.twitterShare.content5.link": "Leggi l'articolo",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Guarda il video",
+    "growth.share.content7.title": "Nuovi modi per guadagnare OGN a settembre",
+    "growth.share.content7.details": "Unisciti alla campagna Origin e diventa un possessore di token insieme a migliaia di utenti in tutto il mondo.",
+    "growth.share.content7.link": "Leggi l'articolo",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Leggi l'articolo",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Leggi l'articolo",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Leggi l'articolo"
   },
   "2hr27C": "Vendi un Articolo",
   "3H6hnZ": "Condividi questo su Twitter",
   "2TpGxd": "Condividi questo su Facebook",
   "9RNU7": "Seguici su Twitter",
-  "3ia70n": "Join us on Telegram",
+  "3ia70n": "Unisciti a noi su Telegram",
   "2anQQJ": "Metti mi piace sulla nostra pagina Facebook",
   "3XLL4i": "Richiede:",
   "nbvr5": "Meno dettagli",
@@ -246,9 +265,9 @@
   "2qp2PH": "Verifiche",
   "AvXdK": "Acquisti",
   "VUfcH": "Promuovi Origin",
-  "19MYtU": "Requires: Email and profile verifications",
+  "19MYtU": "Obbligatorio: verifica del profilo e della Email",
   "1cVxL1": "Segui Origin",
-  "3bM6xM": "Requires: Email and profile verifications",
+  "3bM6xM": "Obbligatorio: verifica del profilo e della Email",
   "3jSVl7": "Inviti",
   "34uH3R": "Disponibile",
   "4qOByY": "Guadagnato",
@@ -314,7 +333,7 @@
   "2sSICu": "Disputa iniziata",
   "1pxzG8": "Sentenza Emessa",
   "1dxXSN": "Per iniziare",
-  "2XB2Ju": "Contatta l'utente",
+  "23Rjrw": "Contatto",
   "2XVXB5": "Scrivendo nella blockchain.",
   "48sqnA": "Questa operazione potrebbe richiedere un minuto.",
   "3JYttU": "In attesa di conferma.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Se avete domande o bisogno di contestare una transazione, {=let us know} .",
   "1cDNp2": "facci sapere",
   "2aLpDM": "Ho capito.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Aiuto",
   "1nLPNA": "Supporto, impostazioni e altro",
   "37CWGX": "Chiudi",
@@ -513,24 +534,10 @@
   "3OynBg": "Boost è richiesto",
   "enjCs": "Boost deve essere un numero",
   "2PfKPF": "Boost deve essere zero o maggiore",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "La tua inserzione è stata creata!",
-  "3wzgqi": "La tua inserzione sarà visibile entro pochi secondi. Ecco cosa succede dopo: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Gli acquirenti ora vedranno il tuo annuncio sul mercato.",
-  "1kWh5e": "Quando un acquirente fa un'offerta sul tuo annuncio, puoi scegliere di accettarlo o rifiutarlo.",
-  "tlGL2": "Una volta accettata l'offerta, ti sarà richiesto di evadere l'ordine.",
-  "GDqc6": "Riceverai il pagamento una volta che l'acquirente confermerà che l'ordine è stato eseguito.",
-  "RwRY0": "Visualizza l'annuncio",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "La tua inserzione è stata aggiornata!",
-  "3uI2LK": "La tua inserzione sarà visibile entro pochi secondi. Ecco cosa succede dopo: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Gli acquirenti ora vedranno il tuo annuncio sul mercato.",
-  "1FflGv": "Quando un acquirente fa un'offerta sul tuo annuncio, puoi scegliere di accettarlo o rifiutarlo.",
-  "1lOiT1": "Una volta accettata l'offerta, ti sarà richiesto di evadere l'ordine.",
-  "1ZL8Bw": "Riceverai il pagamento una volta che l'acquirente confermerà che l'ordine è stato eseguito.",
-  "4iVrWM": "Caricamento",
+  "IY0I8": "Congratulazioni",
+  "2CH3xS": "Hai pubblicato con successo il tuo annuncio.",
+  "3fVQoe": "Visualizza il mio annuncio",
+  "3irw3i": "Crea un altro annuncio",
   "3BUXpv": "{=Approve OGN} Clicca sotto per approvare gli OGN per l'uso su Origin",
   "1DYydy": "Approva gli OGN",
   "1ZMsNQ": "Successo!",
@@ -714,12 +721,12 @@
   "3EZpe2": "Verifica",
   "1MGoka": "Verifica indirizzo email",
   "1yqhXg": "Gli altri utenti sapranno che hai un account {provider} verificato, ma i dettagli dell'account non saranno pubblicati sulla blockchain. Non pubblicheremo mai a tuo nome.",
-  "C9Xmg": "Your Facebook account ID",
-  "21Ni1q": "Your Twitter username and account ID",
-  "2W3fI2": "Your Google account ID",
-  "2YI16P": "Your Kakao account ID",
-  "tkKfT": "Your Wechat account ID",
-  "qvgE3": "Your GitHub username and account ID",
+  "C9Xmg": "Il tuo ID di Facebook",
+  "21Ni1q": "Il tuo ID e il tuo nome utente di Twitter",
+  "2W3fI2": "Il tuo ID di Google",
+  "2YI16P": "Il tuo ID di Kakao",
+  "tkKfT": "Il tuo ID di WeChat",
+  "qvgE3": "Il tuo ID e il tuo nome utente di GitHub",
   "DNxYB": "Il tuo nome utente LinkedIn",
   "2Hz1fz": "Cosa sarà visibile sulla blockchain?",
   "2hiWEB": "Verifica {provider} account",
@@ -737,11 +744,11 @@
   "2sRdX8": "Che hai un numero di telefono verificato, ma NON il tuo numero di telefono effettivo",
   "1OUJhq": "Inserisci il codice che ti abbiamo inviato qui sotto",
   "jNcvI": "Ti abbiamo inviato un codice di verifica tramite SMS. Si prega di inserire qui sotto",
-  "4laugF": "Verify Telegram Account",
-  "3hKLwD": "Verify your Telegram Account",
-  "2KQpoG": "We will never post on your behalf.",
-  "2Ezyas": "What will be visible on the blockchain?",
-  "44w6ur": "Your Telegram username and account ID",
+  "4laugF": "Verifica il tuo utente Telegram",
+  "3hKLwD": "Verifica il tuo utente Telegram",
+  "2KQpoG": "Non pubblicheremo mai per tuo conto.",
+  "2Ezyas": "Cosa sarà visibile sulla blockchain?",
+  "44w6ur": "Il tuo ID e nome utente di Telegram",
   "3fLVs6": "Verifica il tuo sito web",
   "vyn8P": "Inserisci l'URL del tuo sito web qui sotto",
   "2DQDJG": "Cosa sarà visibile sulla blockchain?",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commissione per unità",
   "1Lcd02": "Budget totale",
   "NWpZ1": "Budget totale rimanente",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Esposizione annuncio",
   "17sXwL": "Modifica la commissione",
   "2SB7RO": "In sospeso",
@@ -792,13 +795,17 @@
   "73tw2": "Gli ETH saranno trasferiti su un contratto di deposito a garanzia e trattenuti fino al completamento della vendita.",
   "1BJrxU": "L'importo ETH è un'approssimazione e sarà convertito in DAI prima di essere trasferito a un contratto di deposito a garanzia.",
   "1vXR79": "Pagamento",
+  "8kJRE": "Promuovi il tuo annuncio con",
+  "1voSMo": "Ottieni maggiore visibilità e vendi più velocemente.",
+  "4u4ITL": "Promuovi ora",
+  "1uOQBZ": "Come ottenere OGN",
   "IlnwX": "Quantità",
   "1usuUr": "Fuso orario:",
   "4xvjOX": "NOTA: questo è diverso dal tuo fuso orario di {userTimeZone}",
   "NF15": "Chiaro",
   "dyal9": "Elenco non trovato",
+  "1qiDQm": "Annuncio non valido",
   "ZOcTF": "Elenco {id}",
-  "1ucotJ": "Elenco non valido",
   "1JLB9": "Altri annunci di questo venditore",
   "OTShT": "Descrizione del prodotto",
   "4xrZ3E": "Informazioni sul venditore",
@@ -813,22 +820,10 @@
   "37CGq4": "Guadagna {=Origin Tokens}",
   "2uLTWt": "Token di Origin",
   "3xBWhk": "Dal team Origin",
-  "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Nota: ricerca non disponibile",
-  "zHCdD": "Categorie",
-  "qNN0R": "Ricompense",
-  "w9VwW": "Abbigliamento",
-  "3KBUPq": "Carte regalo",
-  "1n8Uhq": "Alloggio",
-  "13f5tg": "Servizi",
-  "3duCHQ": "Arte",
+  "4CmiKR": "Compra cose e guadagna tokens!",
   "1tebgy": {
     "*": "{number} Annunci",
     "_1": "1 Annuncio"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} risultati",
-    "_1": "{count} {category} risultati"
   },
   "3pJs9O": {
     "*": "{count} annunci con premi Origin",
@@ -838,18 +833,28 @@
     "*": "{number} risultati",
     "_1": "1 risultato"
   },
-  "39Up0B": "Annunci",
   "62EcI": "Nessun risultato di ricerca trovato",
   "49IFWc": "Il tuo mercato non ha ancora nessun annuncio",
   "2Vj5Zk": "Puoi creare elenchi tu stesso o invitare venditori ad aderire alla tua piattaforma!",
   "2Qfyq": "Crea un annuncio",
   "4u7nzi": "Nessun annuncio trovato",
+  "4F16NR": "Ricerca",
+  "JcV8m": "Nota: ricerca non disponibile",
+  "zHCdD": "Categorie",
+  "qNN0R": "Ricompense",
+  "w9VwW": "Abbigliamento",
+  "3KBUPq": "Carte regalo",
+  "1n8Uhq": "Alloggio",
+  "13f5tg": "Servizi",
+  "3duCHQ": "Arte",
+  "39Up0B": "Annunci",
+  "3ODHrz": "Indietro",
   "4v3q78": "Carica di più",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
-  "3Ul6WQ": "Price: Low to High",
-  "1rioH9": "Price: High to Low",
+  "4pf0yW": "Featured",
+  "3Ul6WQ": "Prezzo: dal basso all'alto",
+  "1rioH9": "Prezzo: dall'alto al basso",
+  "qqmM": "Sort",
+  "114jZK": "Ordina per",
   "2XkwlS": "Non è possibile interrogare i messaggi",
   "333iq2": "Nessuna conversazione!",
   "1DH3KE": "Messaggi",
@@ -896,7 +901,6 @@
   "4hyWlA": "Crea un annuncio",
   "30cTSB": "Impostazioni",
   "26gf1A": "Modifica inserzione",
-  "3ODHrz": "Indietro",
   "dztC6": "Acquisti",
   "3ypwUq": "Annunci",
   "2SCFyd": "Saldi",
@@ -947,7 +951,7 @@
   "4B7lnl": "Crea un profilo di base in modo che altri possano sapere chi sei nel Marketplace di Origin.",
   "t06nL": "Messaggistica Origin",
   "4aVWeW": "Origin Synaging Syncing",
-  "mmY61": "0 di 2 messaggi MetaMask firmati",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "La messaggistica ti consentirà di chattare con altri acquirenti e venditori.",
   "1h9kqx": "In attesa che tu firmi il messaggio numero {messageNumber}",
   "tZGri": "{messageNumber} di 2 messaggi MetaMask firmati",
@@ -956,8 +960,10 @@
   "34wViE": "2 di 2 messaggi MetaMask firmati",
   "2xVe7N": "Congratulazioni! Ora puoi inviare messaggi ad altri utenti su Origin e rimanere aggiornato su tutti i tuoi acquisti e vendite.",
   "3xbKVN": "Hai finito e puoi continuare premendo il pulsante qui sotto.",
+  "2MbPUC": "Continua",
   "1bjxG": "Errore",
   "B3XI5": "No Web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Abilita la messaggistica",
   "42zV7P": "Installa MetaMask",
   "1AkpVQ": "Installare MetaMask ...",
@@ -989,22 +995,32 @@
   "1X9OF7": "MetaMask è un'estensione del browser che ti permetterà di accedere al web decentralizzato.",
   "XaD4D": "Disponibile per {browser}",
   "29RrPk": "Connetti MetaMask",
+  "1AQgmT": "Aprendo la App...",
+  "4iVrWM": "Caricamento",
   "4apdzo": "Promuovi adesso",
-  "1o5hKC": "Please enter a commission amount",
-  "2IWJV3": "Not enough OGN",
+  "1o5hKC": "Per favore specifica un valore per la commissione",
+  "2IWJV3": "Non abbastanza OGN",
   "3kj2Lx": "Promuovi l'annuncio",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Unità disponibili: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} unità × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Esposizione annuncio:",
-  "4x4HEK": "Please enter a commission budget",
+  "4x4HEK": "Per favore specifica un budget per la commissione",
   "1amG5j": "Budget totale",
   "1kXVpx": "Importo che sei disposto a spendere per tutte le unità vendute",
   "2luPDv": "Commissione totale richiesta per vendere {unitsAvailable} unità: {totalCommission} OGN",
   "1lrIeH": "Come funziona?",
-  "KOIsn": "Puoi promuovere il tuo annuncio depositando i token di origine (OGN). Il tuo OGN è come un {=commission} che verrà detratto ogni volta che viene effettuata una vendita. In questo modo il tuo annuncio {=more exposure} sulla rete Origin",
-  "1amBJW": "commissione",
-  "3C8pEw": "più visibilità",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commissione",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Notifiche del desktop abilitate ✅",
   "gLVF0": "impostazioni",
   "1lZQR5": "impostazioni",
