--- a/nick/translations/ru_RU.json
+++ b/nick/translations/ru_RU.json
@@ -114,7 +114,7 @@
   "FajrL": "Подтвердите свой профиль в Telegram",
   "2peucP": "Создать объявление",
   "2QerxF": "Купить листинг",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Январь 2019 Кампания",
     "growth.jan2019.short_name": "Январь 2019",
     "growth.feb2019.name": "Февраль 2019 Кампания",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "Июнь 2019",
     "growth.july2019.name": "Компания в июле 2019",
     "growth.july2019.short_name": "Июль 2019",
+    "growth.aug2019.name": "Компания в августе 2019",
+    "growth.aug2019.short_name": "Август 2019",
+    "growth.sep2019.name": "Компания в сентябре 2019",
+    "growth.sep2019.short_name": "Сентябрь 2019",
     "growth.profile.and.email.requirement": "Подтвержденный адрес электронной почты и Происхождение",
     "growth.two.attestations.requirement": "Два подтверждения в профиле",
     "growth.profile.requirement": "Имя и фотография в профиле",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Глобальное сообщество Origin",
     "growth.twitterShare.content5.details": "Сообщество Origin насчитывает десятки тысяч людей по всему миру, разделяющих наши взгляды. Присоединяйтесь к нашей группе в Telegram (ENG).",
     "growth.twitterShare.content5.link": "Читать статью",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "Основатель YouTube обсуждает сильные стороны команды Origin",
+    "growth.share.content6.details": "Стив Чен, со-основатель YouTube, обсуждает сильные стороны команды Origin.",
+    "growth.share.content6.link": "Смотреть видео",
+    "growth.share.content7.title": "Новые способы заработать OGN в сентябре",
+    "growth.share.content7.details": "Присоединяйтесь к Origin Rewards и станьте держателем токенов вместе с тысячами пользователей по всему миру.",
+    "growth.share.content7.link": "Читать статью",
+    "growth.share.content8.title": "Origin присоединился к Blockfolio Signal!",
+    "growth.share.content8.details": "Подписывайтесь на Origin в Blockfolio и получайте последние новости от команды.",
+    "growth.share.content8.link": "Читать статью",
+    "growth.share.content9.title": "Присоединяйтесь к группе Origin в Telegram и зарабатывайте OGN",
+    "growth.share.content9.details": "Присоединяйтесь к группе Origin в Telegram и бесплатно получайте токены Origin!",
+    "growth.share.content9.link": "Читать статью",
+    "growth.share.content10.title": "Децентрализованная Коммерция а Венесуэле",
+    "growth.share.content10.details": "Недорогие мобильные телефоны могут дать доступ 2-м миллиардам человек доступ к маркетплейсам на блокчейне, которые не привязаны к банкам.",
+    "growth.share.content10.link": "Читать статью"
   },
   "2hr27C": "Продать объявление",
   "3H6hnZ": "Поделись этим в Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Спор начат",
   "1pxzG8": "Решение вынесено",
   "1dxXSN": "Начать",
-  "2XB2Ju": "Связаться с пользователем",
+  "23Rjrw": "Связаться",
   "2XVXB5": "Запись в блокчейн.",
   "48sqnA": "Это может занять минуту.",
   "3JYttU": "Ожидание подтверждения.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Если у вас есть какие-либо вопросы или вам необходимо оспорить сделку, {=let us know}.",
   "1cDNp2": "дайте нам знать",
   "2aLpDM": "Я понял.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Помощь",
   "1nLPNA": "Поддержка, настройки и другое",
   "37CWGX": "Закрыть",
@@ -513,24 +534,10 @@
   "3OynBg": "Требуется повышение",
   "enjCs": "Boost должен быть числом",
   "2PfKPF": "Увеличение должно быть ноль или больше",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Ваше объявление создано!",
-  "3wzgqi": "Ваш список будет виден в течение нескольких секунд. Вот что происходит дальше: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Теперь покупатели увидят ваше объявление на торговой площадке.",
-  "1kWh5e": "Когда покупатель предложит купить ваш товар, вы можете принять или отклонить его предложение.",
-  "tlGL2": "Если вы примите предложение, вы должны выполнить заказ.",
-  "GDqc6": "Вы получите платеж, как только покупатель подтвердит, что заказ выполнен.",
-  "RwRY0": "Посмотреть список",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Ваше объявление обновлено!",
-  "3uI2LK": "Ваш список будет виден в течение нескольких секунд. Вот что происходит дальше: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Теперь покупатели увидят ваше объявление на торговой площадке.",
-  "1FflGv": "Когда покупатель предложит купить ваш товар, вы можете принять или отклонить его предложение.",
-  "1lOiT1": "Если вы примите предложение, вы должны выполнить заказ.",
-  "1ZL8Bw": "Вы получите платеж, как только покупатель подтвердит, что заказ выполнен.",
-  "4iVrWM": "Загрузка",
+  "IY0I8": "Поздравляю",
+  "2CH3xS": "Вы успешно разместили своё объявление.",
+  "3fVQoe": "Посмотреть моё объявление",
+  "3irw3i": "Создать другое объявление",
   "3BUXpv": "{=Approve OGN} Нажмите ниже, чтобы подтвердить OGN для использования в Origin",
   "1DYydy": "Подтведить OGN",
   "1ZMsNQ": "Успех!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Комиссия за единицу",
   "1Lcd02": "Общий бюджет",
   "NWpZ1": "Общий оставшийся бюджет",
-  "8kJRE": "Продвиньте ваше объявление с",
-  "1voSMo": "Получить больше экспозиции и продавать быстрее.",
-  "4u4ITL": "Рекламировать сейчас",
-  "1uOQBZ": "Как получить OGN",
   "3a7oWw": "Список воздействия",
   "17sXwL": "Редактировать комиссию",
   "2SB7RO": "Ожидающие",
@@ -792,13 +795,17 @@
   "73tw2": "Ваш ETH будет отправлен на эскроу-контракт и будет храниться на нем до завершения сделки.",
   "1BJrxU": "Сумма ETH является приблизительной и будет конвертирована в DAI перед переводом в договор условного депонирования.",
   "1vXR79": "Оплата",
+  "8kJRE": "Продвиньте ваше объявление с",
+  "1voSMo": "Получить больше экспозиции и продавать быстрее.",
+  "4u4ITL": "Рекламировать сейчас",
+  "1uOQBZ": "Как получить OGN",
   "IlnwX": "Количество",
   "1usuUr": "Часовой пояс:",
   "4xvjOX": "ПРИМЕЧАНИЕ: это отличается от вашего часового пояса {userTimeZone}",
   "NF15": "Очистить",
   "dyal9": "Объявление не найдено",
+  "1qiDQm": "Неактивное объявление",
   "ZOcTF": "Листинг {id}",
-  "1ucotJ": "Неверный список",
   "1JLB9": "Другие объявления этого продавца",
   "OTShT": "Описание товара",
   "4xrZ3E": "О продавце",
@@ -814,21 +821,9 @@
   "2uLTWt": "Токены Origin",
   "3xBWhk": "От команды Origin",
   "4CmiKR": "Покупайте вещи и зарабатывайте токены!",
-  "JcV8m": "Примечание: поиск недоступен",
-  "zHCdD": "Категории",
-  "qNN0R": "Награды",
-  "w9VwW": "Одежда",
-  "3KBUPq": "Подарочные карты",
-  "1n8Uhq": "Жилье",
-  "13f5tg": "Сервисы",
-  "3duCHQ": "Искусство",
   "1tebgy": {
     "*": "Объявления: {number}",
     "_1": "1 листинг"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} результатов",
-    "_1": "{count} {category} результат"
   },
   "3pJs9O": {
     "*": "{count} Объявления с Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} результаты",
     "_1": "1 результат"
   },
-  "39Up0B": "Объявления",
   "62EcI": "Результаты поиска не найдены",
   "49IFWc": "На вашем рынке пока нет объявлений",
   "2Vj5Zk": "Вы можете создавать списки самостоятельно или приглашать продавцов присоединиться к вашей платформе!",
   "2Qfyq": "Создать объявление",
   "4u7nzi": "Списки не найдены",
+  "4F16NR": "Поиск",
+  "JcV8m": "Примечание: поиск недоступен",
+  "zHCdD": "Категории",
+  "qNN0R": "Награды",
+  "w9VwW": "Одежда",
+  "3KBUPq": "Подарочные карты",
+  "1n8Uhq": "Жилье",
+  "13f5tg": "Сервисы",
+  "3duCHQ": "Искусство",
+  "39Up0B": "Объявления",
+  "3ODHrz": "Назад",
   "4v3q78": "Загрузи больше",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
-  "3Ul6WQ": "Price: Low to High",
-  "1rioH9": "Price: High to Low",
+  "4pf0yW": "Избранное",
+  "3Ul6WQ": "Цена: от низкой к высокой",
+  "1rioH9": "Цена: от высокой к низкой",
+  "qqmM": "Отсортировать",
+  "114jZK": "Отсортировать по",
   "2XkwlS": "Не удается запросить сообщения",
   "333iq2": "Нет разговоров!",
   "1DH3KE": "Сообщения",
@@ -896,7 +901,6 @@
   "4hyWlA": "Создать объявление",
   "30cTSB": "Настройки",
   "26gf1A": "Редактировать объявление",
-  "3ODHrz": "Назад",
   "dztC6": "Покупки",
   "3ypwUq": "Объявления",
   "2SCFyd": "Продажи",
@@ -947,7 +951,7 @@
   "4B7lnl": "Создайте базовый профиль, чтобы другие пользователи Origin Marketplace знали, кто вы.",
   "t06nL": "Происхождение сообщений",
   "4aVWeW": "Синхронизация исходных сообщений",
-  "mmY61": "0 из 2 сообщений MetaMask подписано",
+  "1Nq45C": "{messageNumber} из 2 сообщений MetaMask подписано",
   "3bcmm4": "Обмен сообщениями позволит вам общаться с другими покупателями и продавцами.",
   "1h9kqx": "Жду, пока вы подпишете сообщение № {messageNumber}",
   "tZGri": "{messageNumber} из 2 сообщений MetaMask подписано",
@@ -956,8 +960,10 @@
   "34wViE": "2 из 2 сообщений MetaMask подписаны",
   "2xVe7N": "Поздравляем! Теперь вы можете отправлять сообщения другим пользователям в Origin и получать информацию обо всех ваших покупках и продажах.",
   "3xbKVN": "Вы сделали и можете продолжить, нажав кнопку ниже.",
+  "2MbPUC": "Продолжить",
   "1bjxG": "Ошибка",
   "B3XI5": "Нет Web3",
+  "3SotHT": "Возникла непредвиденная ошибка.",
   "1LEF7E": "Вкл. сообщения",
   "42zV7P": "Установить MetaMask",
   "1AkpVQ": "Установка MetaMask ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask - это расширение для браузера Chrome, которое позволит вам получить доступ к децентрализованной сети.",
   "XaD4D": "Доступно для {browser}",
   "29RrPk": "Подключите MetaMask",
+  "1AQgmT": "Открытие приложения...",
+  "4iVrWM": "Загрузка",
   "4apdzo": "Рекламировать сейчас",
   "1o5hKC": "Пожалуйста, введите сумму комиссии",
   "2IWJV3": "Недостаточно OGN",
   "3kj2Lx": "Продвинуть объявление",
+  "L9mjs": "OGN баланс:",
   "2cMBmH": "Доступные единицы {unitsAvailable}",
+  "kqBmE": "Комиссия за проданную единицу",
+  "1ZZXAc": "Сумма комиссии",
+  "F4rDk": "Выплачено при продаже вашего объявления.",
   "3m3bsx": "{unitsAvailable} единицы × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Список воздействия:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Сумма, которую вы готовы потратить для продажи всех вещей",
   "2luPDv": "Общая комиссия, необходимая для продажи {unitsAvailable} единиц {totalCommission} OGN",
   "1lrIeH": "Как это работает?",
-  "KOIsn": "Вы можете рекламировать своё объявление, путем внесения токенов Origin (OGN). Ваш OGN поход на {=commission}, который будет вычитаться каждый раз, когда производится продажа. Это дает вашему объявлению {=more exposure} по всей сети Origin",
-  "1amBJW": "комиссия",
-  "3C8pEw": "больше выдержки",
+  "vXDfP": "Вы можете продвигать свой объявление, пополняя токены Origin (OGN). Ваш OGN подобен {=commission}, который будет вычитаться каждый раз, когда производится продажа.",
+  "2DUOxZ": "комиссия",
+  "23CyCf": "Это дает вашему объявлению более высокое размещение и {=more exposure} по всей сети Origin",
+  "41dR5i": "больше выдержки",
+  "3vDb1N": "Успех!",
+  "3NGsUC": "Вы успешно продвинули своё объявление.",
+  "3QQbmb": "Список воздействия",
   "3UjbU1": "Уведомления на рабочем столе включены ✅",
   "gLVF0": "настройки",
   "1lZQR5": "настройки",
