--- a/nick/translations/vi_VN.json
+++ b/nick/translations/vi_VN.json
@@ -114,7 +114,7 @@
   "FajrL": "Verify your Telegram Profile",
   "2peucP": "Tạo một danh sách",
   "2QerxF": "Mua một danh sách",
-  "1RwTp": {
+  "2XiL3b": {
     "growth.jan2019.name": "Chiến dịch tháng 1 năm 2019",
     "growth.jan2019.short_name": "Tháng 1 năm 2019",
     "growth.feb2019.name": "Chiến dịch tháng 2 năm 2019",
@@ -129,6 +129,10 @@
     "growth.june2019.short_name": "June 2019",
     "growth.july2019.name": "July 2019 Campaign",
     "growth.july2019.short_name": "July 2019",
+    "growth.aug2019.name": "August 2019 Campaign",
+    "growth.aug2019.short_name": "August 2019",
+    "growth.sep2019.name": "September 2019 Campaign",
+    "growth.sep2019.short_name": "September 2019",
     "growth.profile.and.email.requirement": "Email được xác minh và hồ sơ gốc",
     "growth.two.attestations.requirement": "Two profile verifications",
     "growth.profile.requirement": "Profile name and photo",
@@ -232,7 +236,22 @@
     "growth.twitterShare.content5.title": "Origin's Global Community",
     "growth.twitterShare.content5.details": "Origin has a global presence, with tens of thousands community members supporting our vision. Join our Telegram (ENG) today.",
     "growth.twitterShare.content5.link": "Read the article",
-    "growth.purchase.empty.details": ""
+    "growth.purchase.empty.details": "",
+    "growth.share.content6.title": "YouTube Founder Discusses Strength of Origin Team",
+    "growth.share.content6.details": "Steve Chen, co-founder of YouTube discusses strength of Origin team.",
+    "growth.share.content6.link": "Watch the video",
+    "growth.share.content7.title": "New Ways to Earn OGN in September",
+    "growth.share.content7.details": "Join Origin Rewards and become a token holder alongside thousands of users around the world.",
+    "growth.share.content7.link": "Read the article",
+    "growth.share.content8.title": "Origin is now live on Blockfolio Signal!",
+    "growth.share.content8.details": "Follow Origin on Blockfolio & receive latest updates from Origin's core team.",
+    "growth.share.content8.link": "Read the article",
+    "growth.share.content9.title": "Join Origin's Telegram and earn OGN",
+    "growth.share.content9.details": "Follow Origin on Telegram and earn free Origin Tokens!",
+    "growth.share.content9.link": "Read the article",
+    "growth.share.content10.title": "Decentralized Commerce in Venezuela",
+    "growth.share.content10.details": "Inexpensive mobile phones can give 2 billion unbanked access to blockchain-powered marketplaces.",
+    "growth.share.content10.link": "Read the article"
   },
   "2hr27C": "Bán một danh sách",
   "3H6hnZ": "Share this on Twitter",
@@ -314,7 +333,7 @@
   "2sSICu": "Đã bắt đầu tranh chấp",
   "1pxzG8": "Phán quyết đã được thực hiện",
   "1dxXSN": "Bắt đầu",
-  "2XB2Ju": "Contact user",
+  "23Rjrw": "Contact",
   "2XVXB5": "Viết lên blockchain.",
   "48sqnA": "Điều này có thể mất một phút.",
   "3JYttU": "Đang chờ xác nhận.",
@@ -334,6 +353,8 @@
   "3RWPjE": "Nếu bạn có bất kỳ câu hỏi hoặc cần tranh chấp một giao dịch, {=let us know}.",
   "1cDNp2": "hãy cho chúng tôi biết",
   "2aLpDM": "Tôi đạt được rồi.",
+  "4rEkjp": "It seems that you are using Brave",
+  "4qwysf": "To avoid problems with Origin Marketplace you should lower your shields",
   "23c0Qy": "Help",
   "1nLPNA": "Support, settings, & more",
   "37CWGX": "Close",
@@ -513,24 +534,10 @@
   "3OynBg": "Cần tăng cường",
   "enjCs": "Tăng phải là một số",
   "2PfKPF": "Tăng phải bằng không hoặc lớn hơn",
-  "hp3fI": "{=Your listing has been created!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "uW1FI": "Danh sách của bạn đã được tạo!",
-  "3wzgqi": "Danh sách của bạn sẽ được hiển thị trong vòng một vài giây. Đây là những gì xảy ra tiếp theo: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "eRIIc": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "23A9UA": "Người mua sẽ thấy danh sách của bạn trên thị trường.",
-  "1kWh5e": "Khi người mua đưa ra đề nghị về danh sách của bạn, bạn có thể chọn chấp nhận hoặc từ chối nó.",
-  "tlGL2": "Khi phiếu mua hàng được chấp nhận, bạn sẽ được yêu cầu thực hiện đơn đặt hàng.",
-  "GDqc6": "Bạn sẽ nhận được thanh toán khi người mua xác nhận rằng đơn đặt hàng đã được hoàn thành.",
-  "RwRY0": "Xem danh sách",
-  "2Q1wzY": "{=Your listing has been updated!}{=Your listing will be visible within a few seconds. Here's what happens next: Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "2ZUxwO": "Danh sách của bạn đã được tạo!",
-  "3uI2LK": "Danh sách của bạn sẽ được hiển thị trong vòng một vài giây. Đây là những gì xảy ra tiếp theo: {=Buyers will now see your listing on the marketplace.When a buyer makes an offer on your listing, you can choose to accept or reject it.Once the offer is accepted, you will be expected to fulfill the order.You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "3onoVX": "{=Buyers will now see your listing on the marketplace.}{=When a buyer makes an offer on your listing, you can choose to accept or reject it.}{=Once the offer is accepted, you will be expected to fulfill the order.}{=You will receive payment once the buyer confirms that the order has been fulfilled.}",
-  "WnyH1": "Người mua sẽ thấy danh sách của bạn trên thị trường.",
-  "1FflGv": "Khi người mua đưa ra đề nghị về danh sách của bạn, bạn có thể chọn chấp nhận hoặc từ chối nó.",
-  "1lOiT1": "Khi phiếu mua hàng được chấp nhận, bạn sẽ được yêu cầu thực hiện đơn đặt hàng.",
-  "1ZL8Bw": "Bạn sẽ nhận được thanh toán khi người mua xác nhận rằng đơn đặt hàng đã được hoàn thành.",
-  "4iVrWM": "Đang tải",
+  "IY0I8": "Congratulations",
+  "2CH3xS": "You've successfully published your listing.",
+  "3fVQoe": "View My Listing",
+  "3irw3i": "Create Another Listing",
   "3BUXpv": "{=Approve OGN} Click below to approve OGN for use on Origin",
   "1DYydy": "Approve OGN",
   "1ZMsNQ": "Success!",
@@ -763,10 +770,6 @@
   "2QlAhE": "Commission per Unit",
   "1Lcd02": "Total Budget",
   "NWpZ1": "Total Budget Remaining",
-  "8kJRE": "Promote your listing with",
-  "1voSMo": "Get more exposure and sell faster.",
-  "4u4ITL": "Promote Now",
-  "1uOQBZ": "How to get OGN",
   "3a7oWw": "Listing Exposure",
   "17sXwL": "Edit Commisison",
   "2SB7RO": "Pending",
@@ -792,13 +795,17 @@
   "73tw2": "Your ETH will be transferred to an escrow contract and held until the sale is completed.",
   "1BJrxU": "ETH amount is an approximation and will be converted to DAI before being transferred to an escrow contract.",
   "1vXR79": "Payment",
+  "8kJRE": "Promote your listing with",
+  "1voSMo": "Get more exposure and sell faster.",
+  "4u4ITL": "Promote Now",
+  "1uOQBZ": "How to get OGN",
   "IlnwX": "Số lượng",
   "1usuUr": "Múi giờ:",
   "4xvjOX": "LƯU Ý: Điều này khác với múi giờ của bạn là {userTimeZone}",
   "NF15": "Clear",
   "dyal9": "Danh sách không tìm thấy",
+  "1qiDQm": "Listing Invalid",
   "ZOcTF": "Liệt kê {id}",
-  "1ucotJ": "Danh sách không hợp lệ",
   "1JLB9": "Other listings by this seller",
   "OTShT": "Product Description",
   "4xrZ3E": "About the seller",
@@ -814,21 +821,9 @@
   "2uLTWt": "Origin Tokens",
   "3xBWhk": "From the Origin Team",
   "4CmiKR": "Buy stuff & earn tokens!",
-  "JcV8m": "Lưu ý: Tìm kiếm không có sẵn",
-  "zHCdD": "Categories",
-  "qNN0R": "Rewards",
-  "w9VwW": "Apparel",
-  "3KBUPq": "Gift Cards",
-  "1n8Uhq": "Housing",
-  "13f5tg": "Services",
-  "3duCHQ": "Art",
   "1tebgy": {
     "*": "{number} Danh sách",
     "_1": "1 danh sách"
-  },
-  "2CpFQp": {
-    "*": "{count} {category} results",
-    "_1": "{count} {category} result"
   },
   "3pJs9O": {
     "*": "{count} Listings with Origin Rewards",
@@ -838,18 +833,28 @@
     "*": "{number} results",
     "_1": "1 result"
   },
-  "39Up0B": "Danh sách",
   "62EcI": "Không tìm thấy kết quả tìm kiếm",
   "49IFWc": "Thị trường của bạn chưa có bất kỳ danh sách nào",
   "2Vj5Zk": "Bạn có thể tự tạo danh sách hoặc mời người bán tham gia nền tảng của bạn!",
   "2Qfyq": "Tạo một danh sách",
   "4u7nzi": "Không tìm thấy danh sách",
+  "4F16NR": "Search",
+  "JcV8m": "Lưu ý: Tìm kiếm không có sẵn",
+  "zHCdD": "Categories",
+  "qNN0R": "Rewards",
+  "w9VwW": "Apparel",
+  "3KBUPq": "Gift Cards",
+  "1n8Uhq": "Housing",
+  "13f5tg": "Services",
+  "3duCHQ": "Art",
+  "39Up0B": "Danh sách",
+  "3ODHrz": "Back",
   "4v3q78": "Tải thêm",
-  "114jZK": "Sort by",
-  "2LiG2d": "Sort By",
-  "6v09l": "Default",
+  "4pf0yW": "Featured",
   "3Ul6WQ": "Price: Low to High",
   "1rioH9": "Price: High to Low",
+  "qqmM": "Sort",
+  "114jZK": "Sort by",
   "2XkwlS": "Không thể truy vấn tin nhắn",
   "333iq2": "Không có cuộc trò chuyện!",
   "1DH3KE": "Tin nhắn",
@@ -896,7 +901,6 @@
   "4hyWlA": "Create a Listing",
   "30cTSB": "Settings",
   "26gf1A": "Edit Listing",
-  "3ODHrz": "Back",
   "dztC6": "Purchases",
   "3ypwUq": "Listings",
   "2SCFyd": "Sales",
@@ -947,7 +951,7 @@
   "4B7lnl": "Create a basic profile so others will know who you are in the Origin Marketplace.",
   "t06nL": "Tin nhắn gốc",
   "4aVWeW": "Đồng bộ hóa tin nhắn gốc",
-  "mmY61": "0 trong số 2 tin nhắn MetaMask đã ký",
+  "1Nq45C": "{messageNumber} of 2 MetaMask messages signed",
   "3bcmm4": "Nhắn tin sẽ cho phép bạn trò chuyện với người mua và người bán khác.",
   "1h9kqx": "Chờ bạn ký tin nhắn số {messageNumber}",
   "tZGri": "{messageNumber} trong số 2 tin nhắn MetaMask đã ký",
@@ -956,8 +960,10 @@
   "34wViE": "2 trong số 2 tin nhắn MetaMask đã ký",
   "2xVe7N": "Xin chúc mừng! Bây giờ bạn có thể nhắn tin cho những người dùng khác trên Origin và cập nhật tất cả các giao dịch mua và bán của bạn.",
   "3xbKVN": "Bạn đã hoàn thành và có thể tiếp tục bằng cách nhấn nút bên dưới.",
+  "2MbPUC": "Continue",
   "1bjxG": "Lỗi",
   "B3XI5": "Không có web3",
+  "3SotHT": "An unexpected error has occurred.",
   "1LEF7E": "Bật nhắn tin",
   "42zV7P": "Cài đặt MetaMask",
   "1AkpVQ": "Cài đặt MetaMask ...",
@@ -989,11 +995,17 @@
   "1X9OF7": "Metamask is a browser extension for Chrome that will allow you to access the decentralized web.",
   "XaD4D": "Có sẵn cho {browser}",
   "29RrPk": "Kết nối MetaMask",
+  "1AQgmT": "Opening App...",
+  "4iVrWM": "Loading",
   "4apdzo": "Promote Now",
   "1o5hKC": "Please enter a commission amount",
   "2IWJV3": "Not enough OGN",
   "3kj2Lx": "Promote Listing",
+  "L9mjs": "OGN Balance:",
   "2cMBmH": "Units Available: {unitsAvailable}",
+  "kqBmE": "Commission per Unit Sold",
+  "1ZZXAc": "Commission Amount",
+  "F4rDk": "Paid out when your listing is sold.",
   "3m3bsx": "{unitsAvailable} units × {=[commissionPerUnit]} = {totalOGN} OGN",
   "1HtBFb": "{commissionPerUnit} OGN",
   "OfLhI": "Listing exposure:",
@@ -1002,9 +1014,13 @@
   "1kXVpx": "Amount you’re willing to spend for all units sold",
   "2luPDv": "Total commission required to sell {unitsAvailable} units: {totalCommission} OGN",
   "1lrIeH": "How does it work?",
-  "KOIsn": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made. This gives your listing {=more exposure} across the Origin network",
-  "1amBJW": "commission",
-  "3C8pEw": "more exposure",
+  "vXDfP": "You can promote your listing by depositing Origin Tokens (OGN). Your OGN is like a {=commission} that will be deducted each time a sale is made.",
+  "2DUOxZ": "commission",
+  "23CyCf": "This gives your listing higher placement and {=more exposure} across the Origin network",
+  "41dR5i": "more exposure",
+  "3vDb1N": "Success!",
+  "3NGsUC": "You've successfully promoted your listing.",
+  "3QQbmb": "Listing Exposure",
   "3UjbU1": "Đã bật thông báo trên màn hình",
   "gLVF0": "Cài đặt",
   "1lZQR5": "Cài đặt",
